--- a/~Potholes_Problem.ipynb
+++ b/~Potholes_Problem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxc3M+Wk5NUx5YvmtkugdD",
+      "authorship_tag": "ABX9TyPWprzlilcmNiAp2W7bnxom",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 133,
       "metadata": {
         "id": "tcLQJgU-q7KC"
       },
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_QpulJhPrj4B",
-        "outputId": "d7ba3d6f-5c6c-452f-83e4-c78eb3696284"
+        "outputId": "6ab10a7c-2dda-450b-f297-dfc915d237d1"
       },
-      "execution_count": 2,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,9 +89,9 @@
           "height": 363
         },
         "id": "EiCp9QfkuZR-",
-        "outputId": "3932d016-a91a-4121-b0b8-3751b691bc8d"
+        "outputId": "e16f3b3f-a925-4b06-9eab-a194e1c3872b"
       },
-      "execution_count": 6,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -111,7 +111,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-39eb2e74-9289-4cd3-b8ea-01762424c775\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-508956ba-43d3-404b-908e-94d9a023381f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -213,7 +213,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-39eb2e74-9289-4cd3-b8ea-01762424c775')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-508956ba-43d3-404b-908e-94d9a023381f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -265,12 +265,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-39eb2e74-9289-4cd3-b8ea-01762424c775 button.colab-df-convert');\n",
+              "        document.querySelector('#df-508956ba-43d3-404b-908e-94d9a023381f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-39eb2e74-9289-4cd3-b8ea-01762424c775');\n",
+              "        const element = document.querySelector('#df-508956ba-43d3-404b-908e-94d9a023381f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -290,8 +290,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9611a407-64c9-4b5e-9cc5-c39aaf6b7bad\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9611a407-64c9-4b5e-9cc5-c39aaf6b7bad')\"\n",
+              "<div id=\"df-07943c30-7787-4c46-98e7-f534364cdd0a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-07943c30-7787-4c46-98e7-f534364cdd0a')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -410,7 +410,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9611a407-64c9-4b5e-9cc5-c39aaf6b7bad button');\n",
+              "        document.querySelector('#df-07943c30-7787-4c46-98e7-f534364cdd0a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -421,7 +421,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 135
         }
       ]
     },
@@ -436,9 +436,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EuOEy-tK1hVF",
-        "outputId": "e7b64242-1340-46b0-a3d8-7f3fdad5a603"
+        "outputId": "40e254ed-de0b-4c69-89f7-949f78428d64"
       },
-      "execution_count": 20,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +462,7 @@
     {
       "cell_type": "code",
       "source": [
-        "potholes.drop([potholes.loc[np.where((potholes['nan_count'].to_numpy()) > 2)].index[0]])"
+        "potholes.drop([potholes.loc[np.where((potholes['nan_count'].to_numpy()) > potholes.shape[1]/2)].index[0]])"
       ],
       "metadata": {
         "colab": {
@@ -470,9 +470,9 @@
           "height": 332
         },
         "id": "18rF_4dW2nF0",
-        "outputId": "d0d4609c-44f7-456b-fa16-df2da4b7d161"
+        "outputId": "a16d36c7-abc6-4097-f469-c2e02161cdc9"
       },
-      "execution_count": 58,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +491,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c4d34800-5510-49fd-ace5-c0b137190772\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-aba6f6ab-3f19-4f3d-9d8f-9b9c512d42b0\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -596,7 +596,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c4d34800-5510-49fd-ace5-c0b137190772')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aba6f6ab-3f19-4f3d-9d8f-9b9c512d42b0')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -648,12 +648,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c4d34800-5510-49fd-ace5-c0b137190772 button.colab-df-convert');\n",
+              "        document.querySelector('#df-aba6f6ab-3f19-4f3d-9d8f-9b9c512d42b0 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c4d34800-5510-49fd-ace5-c0b137190772');\n",
+              "        const element = document.querySelector('#df-aba6f6ab-3f19-4f3d-9d8f-9b9c512d42b0');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -673,8 +673,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5ffaaf86-64d3-4c4b-89fc-de4c8779aea2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5ffaaf86-64d3-4c4b-89fc-de4c8779aea2')\"\n",
+              "<div id=\"df-491539ac-c299-47cc-a91f-f24a4b944481\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-491539ac-c299-47cc-a91f-f24a4b944481')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -793,7 +793,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5ffaaf86-64d3-4c4b-89fc-de4c8779aea2 button');\n",
+              "        document.querySelector('#df-491539ac-c299-47cc-a91f-f24a4b944481 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -804,7 +804,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 137
         }
       ]
     },
@@ -819,9 +819,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8v4r33jQ3mqK",
-        "outputId": "5769c3ac-475b-4939-d462-2be1aac41d52"
+        "outputId": "a83cd4db-8469-4ed7-b1c2-6270ab134d13"
       },
-      "execution_count": 73,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,6 +833,160 @@
             "depth                           3\n",
             "location                        3\n",
             "nan_count                       0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################################\n",
+        "p = potholes.copy()\n",
+        "drop_rows = p.isnull().sum(axis=1) > p.shape[1]/2\n",
+        "print(drop_rows)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fey3NFPpBSIv",
+        "outputId": "92fec08a-0484-4974-b48b-e6c89939ce02"
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    False\n",
+            "1    False\n",
+            "2    False\n",
+            "3    False\n",
+            "4    False\n",
+            "5    False\n",
+            "6    False\n",
+            "7    False\n",
+            "8    False\n",
+            "9     True\n",
+            "dtype: bool\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p.fillna(p.mean(), inplace=True)\n",
+        "print(p.mean(),'\\n')\n",
+        "print(p)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rKR8I8cKDqzQ",
+        "outputId": "c860ecfb-29b1-4722-a4ec-f26a1aa9f374"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "length       5.357143\n",
+            "width        5.533333\n",
+            "depth        3.271429\n",
+            "nan_count    1.000000\n",
+            "dtype: float64 \n",
+            "\n",
+            "     length     width     depth    location  nan_count\n",
+            "0  5.100000  2.800000  2.600000      center          0\n",
+            "1  5.357143  5.800000  3.271429  north edge          2\n",
+            "2  6.200000  6.500000  4.200000        <NA>          1\n",
+            "3  4.300000  6.100000  0.800000      center          0\n",
+            "4  6.000000  5.800000  2.600000  north edge          0\n",
+            "5  5.100000  5.533333  3.271429      center          2\n",
+            "6  6.500000  6.300000  3.900000   west edge          0\n",
+            "7  4.300000  6.100000  4.800000   west edge          0\n",
+            "8  5.357143  5.400000  4.000000        <NA>          2\n",
+            "9  5.357143  5.000000  3.271429        <NA>          3\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-140-392f01f85a64>:1: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+            "  p.fillna(p.mean(), inplace=True)\n",
+            "<ipython-input-140-392f01f85a64>:2: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+            "  print(p.mean(),'\\n')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p.location.fillna(p.location.mode().iat[0], inplace=True)\n",
+        "print(p)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ArBzptdKEIVs",
+        "outputId": "b58194e5-98c0-4860-efd4-258fd518a209"
+      },
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     length     width     depth    location  nan_count\n",
+            "0  5.100000  2.800000  2.600000      center          0\n",
+            "1  5.357143  5.800000  3.271429  north edge          2\n",
+            "2  6.200000  6.500000  4.200000      center          1\n",
+            "3  4.300000  6.100000  0.800000      center          0\n",
+            "4  6.000000  5.800000  2.600000  north edge          0\n",
+            "5  5.100000  5.533333  3.271429      center          2\n",
+            "6  6.500000  6.300000  3.900000   west edge          0\n",
+            "7  4.300000  6.100000  4.800000   west edge          0\n",
+            "8  5.357143  5.400000  4.000000      center          2\n",
+            "9  5.357143  5.000000  3.271429      center          3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = p.loc[~drop_rows]\n",
+        "print(p)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "97RbzTfVFA8_",
+        "outputId": "ccd8cb74-1e64-4a0c-b8c6-f4aa2bd682b2"
+      },
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     length     width     depth    location  nan_count\n",
+            "0  5.100000  2.800000  2.600000      center          0\n",
+            "1  5.357143  5.800000  3.271429  north edge          2\n",
+            "2  6.200000  6.500000  4.200000      center          1\n",
+            "3  4.300000  6.100000  0.800000      center          0\n",
+            "4  6.000000  5.800000  2.600000  north edge          0\n",
+            "5  5.100000  5.533333  3.271429      center          2\n",
+            "6  6.500000  6.300000  3.900000   west edge          0\n",
+            "7  4.300000  6.100000  4.800000   west edge          0\n",
+            "8  5.357143  5.400000  4.000000      center          2\n"
           ]
         }
       ]
